about me in progress

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <a href="https://www.keika.app/"></a>
       <div class="card-body">
       <h5 class="card-title"><a href="https://www.keika.app/">About me</h5></a>
-      <p class="card-text"> Hellloooo</p>
+      <p class="card-text"> Hello</p>
     </div>
   </div>
 
